# clipperops-core

./: .gitignore  Cargo.toml  flake.nix
.cargo/: audit.toml
.devcontainer/: devcontainer.json
proto/: clipper.proto
src/: build.rs  main.rs
