[package]
name = "clipper_ops_core"
version = "0.1.0"
edition = "2021"
authors = ["Matias Cardozo <tu@email.com>"]

[dependencies]
surrealdb = { version = "1.5.6", features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }


# Servidor Web y Rutas (Para webhooks y fallback)
axum = "0.7"

# gRPC y Protocol Buffers (La comunicación inmutable)
tonic = "0.11"
prost = "0.12"

# Utilidades Core (Event Sourcing)
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
# Compilador de archivos .proto a Rust
tonic-build = "0.11"                                  
